2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:

	Fix dup accel.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* data/muine.schemas.in:
	* libmuine/pointer-list-model.c: (pointer_list_model_last):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_last):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Add a repeat mode.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Nullify tmp_cover_image when not needed anymore.

2004-02-02  Goetz Waschk  <waschk@informatik.uni-rostock.de>

	* data/muine.schemas.in:

	An empty string list should be stored as []

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Fix assertions when having an empty playlist. Pointed out by Lee Willis.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* src/SongDatabase.cs:

	Remove album cover pixbuf when not needed anymore.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Release 0.3.1.1.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	A vain attempt to make b0rken filenames work, and fix the bug
	where sometimes the "downloading image" would disappear after 
	a restart.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/images/Makefile.am:
	* data/images/muine-cover-downloading.png:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/Song.cs:

	Add a "downloading" indicator when still searching for an albums
	cover image. Also handle a maximum of 2 pages of results.

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* src/CoverDatabase.cs:

	Hopefully improve cover image fetching reliability some more.
	
	* configure.in:

	Remove explicit dependency on mono 0.29, as the relevant mono bug
	seems to be fixed.
